fixed spacing changes

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -1,9 +1,10 @@
 .app {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 98vh;
   background-color: #eecbcb;
-  overflow-x: hidden;
+  overflow-x: hidden!important;
+  overflow-y: hidden !important; 
   &__content {
     &__night {
       @extend .app;
