--- a/ui/src/pages/Commissions/commissions.scss
+++ b/ui/src/pages/Commissions/commissions.scss
@@ -5,7 +5,7 @@
   justify-items: center;
   grid-template-columns: auto auto auto auto;
   gap: 20px;
-  margin-bottom: 5px;
+  margin-bottom: 100px;
   .border {
     position: relative;
     border-radius: 70px;
