--- a/ui/src/pages/Discord/discord.scss
+++ b/ui/src/pages/Discord/discord.scss
@@ -4,6 +4,7 @@
   justify-content: space-evenly;
   display: flex;
   width: 100%;
+  margin-bottom: 60px;
   &__server {
     border-radius: 15px;
     width: 40%;
